Added logout button which stops music playback and logs him out (work in progress)

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,4 +5,6 @@
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/feedback_link" android:title="@string/feedback_link"
         android:orderInCategory="150" app:showAsAction="never" />
+    <item android:id="@+id/logout_link" android:title="@string/logout_link"
+        android:orderInCategory="150" app:showAsAction="never" />
 </menu>
