--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,22 +25,22 @@
             />
 
         <Button
-            android:id="@+id/start_autoplay"
+            android:id="@+id/schedule_autoplay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Activate Autoplay" />
+            android:text="Schedule Autoplay" />
 
         <Button
-            android:id="@+id/stop_autoplay"
+            android:id="@+id/cancel_autoplay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Deactivate Autoplay" />
+            android:text="Cancel Autoplay" />
 
         <Button
             android:id="@+id/stop_background_autoplay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Stop background speech" />
+            android:text="Stop running TTS that has been started automatically" />
 
     </LinearLayout>
 
