Moved buttons related things from MainActivity into ButtonHandler

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,11 +18,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
-        <Button android:id="@+id/speak"
+        <Button android:id="@+id/handle_speech"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Speak"
-            />
+            android:text="@string/speech_button_default"
+            android:layout_gravity="center_horizontal" />
 
         <Button
             android:id="@+id/handle_autoplay"
