--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 -->
 
-    <style name="MeshMix2" parent="@android:style/Theme.Material.Light" >
+    <style name="MeshMix2" parent="@style/Theme.AppCompat.Light" >
         <item name="android:navigationBarColor">@color/blue</item>
         <item name="android:colorPrimary">@color/primary_material_light</item>
         <item name="android:colorAccent">@color/accent_material_light</item>
