--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,20 +22,41 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/speech_button_default"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"/>
+
+        <Button android:id="@+id/handle_speech_circle"
+            android:text="@string/speech_button_default"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
+            android:scaleType="center"
+            android:adjustViewBounds="true"
+
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/rounded_button_primary"
+            />
+
+        <!--android:contentDescription="@string/play_button"-->
+        <!--android:adjustViewBounds="false"-->
+        <!--android:foregroundGravity="center_horizontal"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:textAlignment="center"-->
 
         <Button
             android:id="@+id/handle_autoplay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/autoplaystatus_button_default"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"/>
 
         <Button
             android:id="@+id/stop_background_autoplay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Stop running TTS that has been started automatically" />
+            android:text="Stop running TTS that has been started automatically"
+            android:layout_gravity="center_horizontal"/>
 
     </LinearLayout>
 
